# vmtricks

./: Cargo.toml
.github/workflows/: ci.yml
src/: alloc.rs  error.rs  lib.rs
src/vm/: mod.rs  windows.rs
src/vm/unix/: mod.rs  shm_open_anonymous.rs
