[package]
name = "vrb"
version = "0.1.0"
authors = ["Caleb Zulawski <caleb.zulawski@gmail.com>"]
edition = "2018"

[dependencies]
num-integer = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = "0.19"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase", "winnt", "handleapi", "sysinfoapi", "errhandlingapi"] }
